Set -add-open in github-actions profile